--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-loading": "^2.0.3",
+    "react-router-dom": "^6.11.1",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
