--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.1",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-input-mask": "^3.0.2",
+    "@types/react-modal": "^3.16.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
