feat: added signin, signup and list companies requests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,12 @@
       "@utils/*": [
         "utils/*"
       ],
+      "@services/*": [
+        "services/*"
+      ],
+      "@store/*": [
+        "store/*"
+      ],
     }
   },
   "include": [
