--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.2",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
@@ -25,6 +30,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-input-mask": "^3.0.2",
     "@types/react-modal": "^3.16.0",
+    "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
