--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.2",
+    "react-usestateref": "^1.0.8",
     "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
