refactor: refactored some pages and components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,6 +50,9 @@
       "@store/*": [
         "store/*"
       ],
+      "@interfaces/*": [
+        "interfaces/*"
+      ],
     }
   },
   "include": [
